[package]
name = "sendfd"
version = "0.1.0"
authors = ["roblabla <robinlambertz+dev@gmail.com>"]
build = "build.rs"
license = "MIT"
description = "Send file descriptors over Unix Domain Sockets"
repository = "https://github.com/roblabla/sendfd"
documentation = "https://docs.rs/sendfd"
keywords = ["posix", "unix", "socket", "fd", "ipc"]

[build-dependencies]
gcc = "0.3"
